콘텐트 그룹화 정리

--- a/assets/01-html/04-grouping/01-main_element.html
+++ b/assets/01-html/04-grouping/01-main_element.html
@@ -24,27 +24,55 @@
 
 	<section class="view_editor ex_code mt_l">
 		<h2 class="ve_tit">main 요소를 하나 이상 사용할때 올바른 예</h2>
-		<div class="view_editor ex_code" data-target="html/04-grouping/4.1.main_element/4.1.main_element1.html">
-			<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-				<div class="code_wrap"><textarea></textarea></div>
-			</div>
+
+		<div class="uk_gist_code_box indent mt_ms" data-tit="main element">
+			<textarea readonly="readonly">
+				<header>Gecko facts</header>
+				<main role="main">
+					<p>Geckos are a group of usually small, usually nocturnal lizards. They are found on every continent except Australia.</p>
+					<p>Many species of gecko have adhesive toe pads which enable them to climb walls and even windows.</p>
+				</main>
+			</textarea>
 		</div>
-		<div class="view_editor ex_code mt_s" data-target="html/04-grouping/4.1.main_element/4.1.main_element2.html">
-			<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-				<div class="code_wrap"><textarea></textarea></div>
-			</div>
+
+		<div class="uk_gist_code_box indent mt_ms" data-tit="main element">
+			<textarea readonly="readonly">
+				<main>
+					<h1>Apples</h1>
+					<p>The apple is the pomaceous fruit of the apple tree.</p>
+					<article>
+						<h2>Red Delicious</h2>
+						<p>These bright red apples are the most common found in many supermarkets.</p>
+						<p>... </p>
+						<p>... </p>
+					</article>
+					<article>
+						<h2>Granny Smith</h2>
+						<p>These juicy, green apples make a great filling for apple pies.</p>
+						<p>... </p>
+						<p>... </p>
+					</article>
+				</main>
+			</textarea>
 		</div>
-		<div class="view_editor ex_code mt_s" data-target="html/04-grouping/4.1.main_element/4.1.main_element3.html">
-			<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-				<div class="code_wrap"><textarea></textarea></div>
-			</div>
+
+		<div class="uk_gist_code_box indent mt_ms" data-tit="main element">
+			<textarea readonly="readonly">
+				<main>...</main>
+				<main hidden>...</main>
+				<main hidden>...</main>
+			</textarea>
 		</div>
 	</section>
 
 	<section class="view_editor ex_code ex_wrong mt_l" data-target="html/04-grouping/4.1.main_element/4.1.main_element4.html">
 		<h2 class="ve_tit">main 요소를 하나 이상 사용할때 잘못된 예</h2>
-		<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-			<div class="code_wrap"><textarea></textarea></div>
+		<div class="uk_gist_code_box indent mt_ms" data-tit="main element">
+			<textarea readonly="readonly">
+				<main>...</main>
+				<main>...</main>
+				<main>...</main>
+			</textarea>
 		</div>
 	</section>
 
