--- a/assets/01-html/04-grouping/03-ol_element.html
+++ b/assets/01-html/04-grouping/03-ol_element.html
@@ -20,10 +20,14 @@
 		<article class="txt_ex indent_max mt_m">
 			<h3 class="ml_mn">[reversed] <span class="t_blue">&lt;ol reversed&gt;</span></h3>
 			<p class="mt_s">항목이 역순으로 지정되도록 지정합니다. html5에서 새로 생성됨.</p>
-			<div class="view_editor ex_code mt_s" data-target="html/04-grouping/4.3.ol_element/4.3.ol_element1.html">
-				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
-				</div>
+			<div class="uk_gist_code_box mt_ms" data-tit="ol element [reversed]">
+				<textarea readonly="readonly">
+					<ol reversed>
+						<li>Coffee</li>
+						<li>Tea</li>
+						<li>Milk</li>
+					</ol>
+				</textarea>
 			</div>
 			<aside class="browser_support mt_m" data-tit="reversed">
 				<ul>
@@ -45,10 +49,14 @@
 				3번부터 번호를 시작하려면 <code>&lt;ol start=&quot;3&quot;&gt;</code> 와 같이 사용할 수 있습니다.<br>
 				이 속성은 HTML4에서 더 이상 사용되지 않지만 HTML5에서 다시 도입되었습니다.
 			</p>
-			<div class="view_editor ex_code mt_s" data-target="html/04-grouping/4.3.ol_element/4.3.ol_element2.html">
-				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
-				</div>
+			<div class="uk_gist_code_box mt_ms" data-tit="ol element [start]">
+				<textarea readonly="readonly">
+					<ol start="50">
+						<li>Coffee</li>
+						<li>Tea</li>
+						<li>Milk</li>
+					</ol>
+				</textarea>
 			</div>
 		</article>
 
@@ -68,17 +76,22 @@
 					<li>'I' - 대문자 로마 숫자 Ⅰ,Ⅱ,Ⅲ... 로 표시</li>
 				</ol>
 			</div>
-			<div class="view_editor ex_code mt_s" data-target="html/04-grouping/4.3.ol_element/4.3.ol_element3.html">
-				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
-				</div>
+			<div class="uk_gist_code_box mt_ms" data-tit="ol element [type]">
+				<textarea readonly="readonly">
+					<!-- type 속성 사용 -->
+					<ol type="a">
+						<li>Coffee</li>
+						<li>Tea</li>
+						<li>Milk</li>
+					</ol>
+				</textarea>
 			</div>
 		</article>
 	</section>
 
 	<section class="view_editor edit_code mt_xxl" data-target="html/04-grouping/4.3.ol_element/4.3.ol_element4.html">
 		<h2 class="ve_tit">기본 리스트 / 중첩 리스트</h2>
-		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
