--- a/assets/01-html/04-grouping/05-li_element.html
+++ b/assets/01-html/04-grouping/05-li_element.html
@@ -36,14 +36,23 @@
 
 	<section class="view_editor ex_code mt_l" data-target="html/04-grouping/4.5.li_element/4.5.li_element1.html">
 		<h2 class="ve_tit">기본 문법</h2>
-		<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-			<div class="code_wrap"><textarea></textarea></div>
+		<div class="uk_gist_code_box indent mt_ms" data-tit="ol element [type]">
+			<textarea readonly="readonly">
+				<p>Apollo astronauts:<p/>
+				<ul>
+					<li>Neil Armstrong</li>
+					<li>Alan Bean</li>
+					<li>Peter Conrad</li>
+					<li>Edgar Mitchell</li>
+					<li>Alan Shepard</li>
+				</ul>
+			</textarea>
 		</div>
 	</section>
 
 	<section class="view_editor edit_code mt_l" data-target="html/04-grouping/4.5.li_element/4.5.li_element2.html">
 		<h2 class="ve_tit">value 속성 사용과 ol reversed 사용 비교</h2>
-		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div class="uk_editor min-height-650 indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default"><!-- min-height-650 -->
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
