--- a/assets/01-html/04-grouping/07-dt_element.html
+++ b/assets/01-html/04-grouping/07-dt_element.html
@@ -20,8 +20,17 @@
 
 	<section class="view_editor ex_code mt_l" data-target="html/04-grouping/4.7.dt_element/4.7.dt_element.html">
 		<h2 class="ve_tit">예제</h2>
-		<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-			<div class="code_wrap"><textarea></textarea></div>
+		<div class="uk_gist_code_box indent mt_ms" data-tit="dt element">
+			<textarea readonly="readonly">
+				<dl>
+					<dt>Denim (semigloss finish)</dt>
+					<dd>Ceiling</dd>
+
+					<dt>Denim (eggshell finish)</dt>
+					<dt>Evening Sky (eggshell finish)</dt>
+					<dd>Layered on the walls</dd>
+				</dl>
+			</textarea>
 		</div>
 	</section>
 
