--- a/assets/01-html/04-grouping/08-dd_element.html
+++ b/assets/01-html/04-grouping/08-dd_element.html
@@ -17,8 +17,19 @@
 
 	<section class="view_editor ex_code mt_l" data-target="html/04-grouping/4.8.dt_element/4.8.dd_element.html">
 		<h2 class="ve_tit">예제</h2>
-		<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-			<div class="code_wrap"><textarea></textarea></div>
+		<div class="uk_gist_code_box indent mt_ms" data-tit="dd element">
+			<textarea readonly="readonly">
+				<dl>
+					<dt>Beast of Bodmin</dt>
+					<dd>A large feline inhabiting Bodmin Moor.</dd>
+
+					<dt>Morgawr</dt>
+					<dd>A sea serpent.</dd>
+
+					<dt>Owlman</dt>
+					<dd>A giant owl-like creature.</dd>
+				</dl>
+			</textarea>
 		</div>
 	</section>
 
