--- a/assets/01-html/04-grouping/09-address_element.html
+++ b/assets/01-html/04-grouping/09-address_element.html
@@ -15,14 +15,24 @@
 
 	<section class="view_editor ex_code mt_l" data-target="html/04-grouping/4.9.address_element/4.9.address_element1.html">
 		<h2 class="ve_tit">기본 문법</h2>
-		<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-			<div class="code_wrap"><textarea></textarea></div>
+		<div class="uk_gist_code_box indent mt_ms" data-tit="address element">
+			<textarea readonly="readonly">
+				<address>
+					You can contact author at <a href="http://www.somedomain.com/contact">www.somedomain.com</a>.<br>
+					If you see any bugs, please <a href="mailto:webmaster@somedomain.com">contact webmaster</a>.<br>
+					You may also want to visit us:<br>
+					Mozilla Foundation<br>
+					331 E Evelyn Ave<br>
+					Mountain View, CA 94041<br>
+					USA
+				</address>
+			</textarea>
 		</div>
 	</section>
 
 	<section class="view_editor edit_code mt_l" data-target="html/04-grouping/4.9.address_element/4.9.address_element2.html">
 		<h2 class="ve_tit">예제</h2>
-		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
