--- a/assets/01-html/04-grouping/11-figcaption_element.html
+++ b/assets/01-html/04-grouping/11-figcaption_element.html
@@ -14,8 +14,13 @@
 
 	<section class="view_editor ex_code mt_m" data-target="html/04-grouping/4.11.figcaption_element/4.11.figcaption_element.html">
 		<h2 class="ve_tit">예제</h2>
-		<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-			<div class="code_wrap"><textarea></textarea></div>
+		<div class="uk_gist_code_box indent mt_ms" data-tit="figcaption element">
+			<textarea readonly="readonly">
+				<figure>
+					<img src="images/html/img_html_tag_structure.png" alt="html 요소 설명">
+					<figcaption>HTML 요소의 기본 구조 설명</figcaption>
+				</figure>
+			</textarea>
 		</div>
 	</section>
 
