--- a/assets/01-html/04-grouping/04-ul_element.html
+++ b/assets/01-html/04-grouping/04-ul_element.html
@@ -12,7 +12,7 @@
 
 	<section class="view_editor edit_code mt_l" data-target="html/04-grouping/4.4.ul_element/4.4.ul_element.html">
 		<h2 class="ve_tit">기본 리스트 / 중첩 리스트</h2>
-		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
