--- a/assets/01-html/04-grouping/13-blockquote_element.html
+++ b/assets/01-html/04-grouping/13-blockquote_element.html
@@ -25,21 +25,38 @@
 
 	<section class="view_editor ex_code mt_l">
 		<h2 class="ve_tit">기본 문법</h2>
-		<div class="view_editor ex_code" data-target="html/04-grouping/4.13.blockquote_element/4.13.blockquote_element1.html">
-			<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-				<div class="code_wrap"><textarea></textarea></div>
-			</div>
+		<div class="uk_gist_code_box indent mt_ms" data-tit="blockquote element">
+			<textarea readonly="readonly">
+				<blockquote cite="http://developer.mozilla.org">
+					<p>This is a quotation taken from the Mozilla Developer Center.</p>
+				</blockquote>
+			</textarea>
 		</div>
-		<div class="view_editor ex_code" data-target="html/04-grouping/4.13.blockquote_element/4.13.blockquote_element2.html">
-			<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-				<div class="code_wrap"><textarea></textarea></div>
-			</div>
+		<div class="uk_gist_code_box indent mt_m" data-tit="blockquote element">
+			<textarea readonly="readonly">
+				<figure>
+					<blockquote>
+						"That monster custom, who all sense doth eat
+						Of habit’s devil," <abbr title="et cetera">&c.</abbr> not in Folio
+
+						"What a falling off was there !
+						From me, whose love was of that dignity
+						That it went hand in hand even with the vow
+						I made to her in marriage, and to decline
+						Upon a wretch."
+					</blockquote>
+					<footer>
+						— <cite class="title">Shakespeare manual</cite> by <cite class="author">Frederick Gard Fleay</cite>,
+						p19 (in Google Books)
+					</footer>
+				</figure>
+			</textarea>
 		</div>
 	</section>
 
 	<section class="view_editor edit_code mt_l" data-target="html/04-grouping/4.13.blockquote_element/4.13.blockquote_element3.html">
 		<h2 class="ve_tit">예제</h2>
-		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
