--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
 	<link href="/assets/lib/css/uk.css" rel="stylesheet" />
 	<link href="/assets/lib/css/uk_sub.css" rel="stylesheet" />
 
-	<script data-ad-client="ca-pub-6842292612653600" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<!-- js -->
 	<script type="text/javascript" src="/assets/lib/js/plugin/jquery-1.9.1.min.js"></script>
 	<!--[if lt IE 9]>
@@ -182,7 +181,72 @@
 <script src="/assets/lib/js/codemirror/mode/javascript/javascript.js"></script><!-- 모드 -->
 <script src="/assets/lib/js/codemirror/mode/php/php.js"></script><!-- 모드 -->
 <script src="/assets/lib/js/codemirror/mode/xml/xml.js"></script><!-- 모드 -->
+<!--<link href="/assets/lib/js/codemirror/theme/moxer.css" rel="stylesheet" />&lt;!&ndash; 테마 &ndash;&gt;-->
+
+<link href="/assets/lib/js/codemirror/theme/3024-day.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/3024-night.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/abcdef.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/ambiance.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/ambiance-mobile.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/ayu-dark.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/ayu-mirage.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/base16-dark.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/base16-light.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/bespin.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/blackboard.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/cobalt.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/colorforth.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/darcula.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/dracula.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/duotone-dark.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/duotone-light.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/eclipse.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/elegant.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/erlang-dark.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/gruvbox-dark.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/hopscotch.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/icecoder.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/idea.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/isotope.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/lesser-dark.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/liquibyte.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/lucario.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/material.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/material-darker.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/material-ocean.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/material-palenight.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/mbo.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/mdn-like.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/midnight.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/monokai.css" rel="stylesheet" /><!-- 테마 -->
 <link href="/assets/lib/js/codemirror/theme/moxer.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/neat.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/neo.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/night.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/nord.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/oceanic-next.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/panda-syntax.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/paraiso-dark.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/paraiso-light.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/pastel-on-dark.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/railscasts.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/rubyblue.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/seti.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/shadowfox.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/solarized.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/ssms.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/the-matrix.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/tomorrow-night-bright.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/tomorrow-night-eighties.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/ttcn.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/twilight.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/vibrant-ink.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/xq-dark.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/xq-light.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/yeti.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/yonce.css" rel="stylesheet" /><!-- 테마 -->
+<link href="/assets/lib/js/codemirror/theme/zenburn.css" rel="stylesheet" /><!-- 테마 -->
+
 <script src="/assets/lib/js/codemirror/addon/scroll/simplescrollbars.js"></script><!-- 스크롤바 -->
 <script src="/assets/lib/js/codemirror/codemirror.js"></script>
 
