--- a/assets/01-html/05-textLevel/02-em_element.html
+++ b/assets/01-html/05-textLevel/02-em_element.html
@@ -14,12 +14,12 @@
 		</p>
 		<div class="line_code mt_s">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="line_code_box line_code_number indent mt_s">
-				<ul>
-					<li>em {</li>
-					<li class="indent">font-style: italic;</li>
-					<li>}</li>
-				</ul>
+			<div class="uk_gist_code_box indent mt_s" data-tit="em element">
+				<textarea readonly="readonly">
+					em {
+						font-style: italic;
+					}
+				</textarea>
 			</div>
 		</div>
 	</section>
