--- a/assets/01-html/05-textLevel/04-strong_element.html
+++ b/assets/01-html/05-textLevel/04-strong_element.html
@@ -13,19 +13,19 @@
 		</p>
 		<div class="line_code mt_s">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="line_code_box line_code_number indent mt_s">
-				<ul>
-					<li>strong {</li>
-					<li class="indent">font-weight: bold;</li>
-					<li>}</li>
-				</ul>
+			<div class="uk_gist_code_box indent mt_s" data-tit="strong element">
+				<textarea readonly="readonly">
+					strong {
+						font-weight: bold;
+					}
+				</textarea>
 			</div>
 		</div>
 	</section>
 
 	<section class="view_editor edit_code mt_l" data-target="html/05-textLevel/5.4.strong_element.html">
 		<h2 class="ve_tit">예제</h2>
-		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
