--- a/assets/01-html/05-textLevel/06-br_element.html
+++ b/assets/01-html/05-textLevel/06-br_element.html
@@ -19,21 +19,27 @@
 		</p>
 		<div class="line_code mt_s">
 			<strong class="t_blue weight-600">ex :</strong>
-			<div class="line_code_box line_code_number indent mt_s">
-				<ul>
-					<li>/* html4 */</li>
-					<li>&lt;br /&gt;</li>
-					<li></li>
-					<li>/* html5 */</li>
-					<li>&lt;br&gt;</li>
-				</ul>
+			<div class="uk_gist_code_box indent mt_s" data-tit="br element">
+				<textarea readonly="readonly">
+					__ex_line__#b72df8__ html4
+					<p>
+						UXKM 홈페이지는 강의 목적으로 제작되었으며,<br />
+						공부를 위해 홈페이지에 접속한 모두를 환영합니다.
+					</p>
+
+					__ex_line__#b72df8__ html5
+					<p>
+						UXKM 홈페이지는 강의 목적으로 제작되었으며,<br>
+						공부를 위해 홈페이지에 접속한 모두를 환영합니다.
+					</p>
+				</textarea>
 			</div>
 		</div>
 	</section>
 
 	<section class="view_editor edit_code mt_l" data-target="html/05-textLevel/5.6.br_element.html">
 		<h2 class="ve_tit">예제</h2>
-		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
