--- a/assets/01-html/05-textLevel/11-sup_element.html
+++ b/assets/01-html/05-textLevel/11-sup_element.html
@@ -16,20 +16,20 @@
 		</p>
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="line_code_box line_code_number indent mt_s">
-				<ul>
-					<li>sup {</li>
-					<li class="indent">vertical-align: super;</li>
-					<li class="indent">font-size: smaller;</li>
-					<li>}</li>
-				</ul>
+			<div class="uk_gist_code_box indent mt_s" data-tit="sup element">
+				<textarea readonly="readonly">
+					sup {
+						vertical-align: super;
+						font-size: smaller;
+					}
+				</textarea>
 			</div>
 		</div>
 	</section>
 
 	<section class="view_editor edit_code mt_l" data-target="html/05-textLevel/5.11.sup_element.html">
 		<h2 class="ve_tit">예제</h2>
-		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
