--- a/assets/01-html/05-textLevel/13-q_element.html
+++ b/assets/01-html/05-textLevel/13-q_element.html
@@ -14,18 +14,18 @@
 		</p>
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="line_code_box line_code_number indent mt_s">
-				<ul>
-					<li>q {</li>
-					<li class="indent">display: inline;</li>
-					<li>}</li>
-					<li>q:before {</li>
-					<li class="indent">content: open-quote;</li>
-					<li>}</li>
-					<li>q:after {</li>
-					<li class="indent">content: close-quote;</li>
-					<li>}</li>
-				</ul>
+			<div class="uk_gist_code_box indent mt_s" data-tit="q element">
+				<textarea readonly="readonly">
+					q {
+						display: inline;
+					}
+					q:before {
+						content: open-quote;
+					}
+					q:after {
+						content: close-quote;
+					}
+				</textarea>
 			</div>
 		</div>
 		<ol class="indent mt_m">
@@ -40,7 +40,7 @@
 
 	<section class="view_editor edit_code mt_l" data-target="html/05-textLevel/5.13.q_element.html">
 		<h2 class="ve_tit">예제</h2>
-		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
