--- a/assets/guide.html
+++ b/assets/guide.html
@@ -213,6 +213,15 @@
 				</div>
 			</textarea>
 		</div>
+		<!-- 오류가 있을 시 data-ex 사용하여 별도 script 작업 -->
+		<div class="uk_gist_code_box indent mt_s" data-tit="sub element" data-ex="sub">
+				<textarea readonly="readonly">
+					.sub {
+						vertical-align: sub;
+						font-size: smaller;
+					}
+				</textarea>
+		</div>
 	</div>
 </div><!-- //wrap -->
 
