--- a/assets/01-html/05-textLevel/03-i_element.html
+++ b/assets/01-html/05-textLevel/03-i_element.html
@@ -16,12 +16,12 @@
 		</p>
 		<div class="line_code mt_s">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="line_code_box line_code_number indent mt_s">
-				<ul>
-					<li>i {</li>
-					<li class="indent">font-style: italic;</li>
-					<li>}</li>
-				</ul>
+			<div class="uk_gist_code_box indent mt_s" data-tit="i element">
+				<textarea readonly="readonly">
+					i {
+						font-style: italic;
+					}
+				</textarea>
 			</div>
 		</div>
 		<div class="ol_lst mt_m italic">
@@ -38,7 +38,7 @@
 
 	<section class="view_editor edit_code mt_l" data-target="html/05-textLevel/5.3.i_element.html">
 		<h2 class="ve_tit">예제</h2>
-		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
