--- a/assets/01-html/05-textLevel/08-s_element.html
+++ b/assets/01-html/05-textLevel/08-s_element.html
@@ -16,19 +16,19 @@
 		</p>
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="line_code_box line_code_number indent mt_s">
-				<ul>
-					<li>s {</li>
-					<li class="indent">text-decoration: line-through;</li>
-					<li>}</li>
-				</ul>
+			<div class="uk_gist_code_box indent mt_s" data-tit="s element">
+				<textarea readonly="readonly">
+					s {
+						text-decoration: line-through;
+					}
+				</textarea>
 			</div>
 		</div>
 	</section>
 
 	<section class="view_editor edit_code mt_l" data-target="html/05-textLevel/5.8.s_element.html">
 		<h2 class="ve_tit">예제</h2>
-		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
