--- a/assets/01-html/05-textLevel/12-mark_element.html
+++ b/assets/01-html/05-textLevel/12-mark_element.html
@@ -25,20 +25,20 @@
 		</ol>
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="line_code_box line_code_number indent mt_s">
-				<ul>
-					<li>mark {</li>
-					<li class="indent">background-color: yellow;</li>
-					<li class="indent">color: black;</li>
-					<li>}</li>
-				</ul>
+			<div class="uk_gist_code_box indent mt_s" data-tit="mark element">
+				<textarea readonly="readonly">
+					mark {
+						background-color: yellow;
+						color: black;
+					}
+				</textarea>
 			</div>
 		</div>
 	</section>
 
 	<section class="view_editor edit_code mt_l" data-target="html/05-textLevel/5.12.mark_element.html">
 		<h2 class="ve_tit">예제</h2>
-		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
