--- a/assets/01-html/05-textLevel/22-bdo_element.html
+++ b/assets/01-html/05-textLevel/22-bdo_element.html
@@ -14,12 +14,12 @@
 		</p>
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="line_code_box line_code_number indent mt_s">
-				<ul>
-					<li>bdo {</li>
-					<li class="indent">unicode-bidi: bidi-override;</li>
-					<li>}</li>
-				</ul>
+			<div class="uk_gist_code_box indent mt_s" data-tit="bdo element">
+				<textarea readonly="readonly">
+					bdo {
+						unicode-bidi: bidi-override;
+					}
+				</textarea>
 			</div>
 		</div>
 		<ol class="indent mt_m">
@@ -36,7 +36,7 @@
 
 	<section class="view_editor edit_code mt_l" data-target="html/05-textLevel/5.22.bdo_element.html">
 		<h2 class="ve_tit">예제</h2>
-		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
