--- a/assets/01-html/05-textLevel/23-wbr_element.html
+++ b/assets/01-html/05-textLevel/23-wbr_element.html
@@ -19,7 +19,7 @@
 
 	<section class="view_editor edit_code mt_l" data-target="html/05-textLevel/5.23.wbr_element.html">
 		<h2 class="ve_tit">예제</h2>
-		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
